# ChangeLog for sys-kernel/ksymoops
# Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-kernel/ksymoops/ChangeLog,v 1.11 2003/12/29 08:00:58 ciaranm Exp $

  29 Dec 2003; Ciaran McCreesh <ciaranm@gentoo.org> ksymoops-2.4.9.ebuild:
  Stable on sparc

*ksymoops-2.4.9 (01 Jun 2003)

  13 Aug 2003; Joshua Kinard <kumba@gentoo.org> ksymoops-2.4.9.ebuild:
  Changed ~mips to mips in KEYWORDS.
  Added ~sparc to KEYWORDS.

  01 Jun 2003; Joshua Kinard <kumba@gentoo.org>
  ksymoops-2.4.8.ebuild, ksymoops-2.4.9.ebuild:
  New Version available (Was released 20 Mar 2003)
  Added ~mips to KEYWORDS in 2.4.8 and 2.4.9.

*ksymoops-2.4.8 (25 Nov 2002)
 
  09 Feb 2003; Seemant Kulleen <seemant@gentoo.org> *.ebuild :
  Changed the search/replace sed expressions to use : instead of / as a
  delimiter. Closes bug #15006 by Blu3 <david+gentoo.org@blue-labs.org>.
 
  02 Dec 2002; Will Woods <wwoods@gentoo.org> ksymoops-2.4.8.ebuild :
  Added alpha keyword.

  25 Nov 2002; Brandon Low <lostlogic@gentoo.org> ksymoops-2.4.8.ebuild :
  Version bump.

*ksymoops-2.4.7 (25 Oct 2002)
  
  25 Oct 2002; Brandon Low <lostlogic@gentoo.org> ksymoops-2.4.7.ebuild :
  Version bump.

*ksymoops-2.4.5 (30 Apr 2002)
  
  30 Apr 2002; Seemant Kulleen <seemant@gentoo.org> ChangeLog
  files/digest-ksymoops-2.4.5 :

  Daniel Robbins added this package from a submission in bug #2263 by
  thompson@pobox.com (Paul Thompson). I am simply enhancing the directory
  by adding the digest file and ChangeLog.