@@ -1,0 +1,14 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<!DOCTYPE pkgmetadata SYSTEM "http://www.gentoo.org/dtd/metadata.dtd">
+<pkgmetadata>
+<herd>kernel</herd>
+<maintainer>
+  <email>plasmaroo@gentoo.org</email>
+</maintainer>
+<maintainer>
+  <email>iggy@gentoo.org</email>
+</maintainer>
+<maintainer>
+  <email>x86-kernel@gentoo.org</email>
+</maintainer>
+</pkgmetadata>
