@@ -1,6 +1,11 @@
 # ChangeLog for sys-kernel/ksymoops
 # Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-kernel/ksymoops/ChangeLog,v 1.11 2003/12/29 08:00:58 ciaranm Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-kernel/ksymoops/ChangeLog,v 1.12 2004/01/08 07:13:09 iggy Exp $
+
+  08 Jan 2004; Brian Jackson <iggy@gentoo.org> ksymoops-2.4.5.ebuild,
+  ksymoops-2.4.7.ebuild, ksymoops-2.4.8.ebuild, ksymoops-2.4.9.ebuild,
+  metadata.xml:
+  updated ebuild Copyright years
 
   29 Dec 2003; Ciaran McCreesh <ciaranm@gentoo.org> ksymoops-2.4.9.ebuild:
   Stable on sparc
